--- a/requirements.txt
+++ b/requirements.txt
@@ -1,127 +1,6 @@
-aiohappyeyeballs==2.3.6
-aiohttp==3.10.5
-aiosignal==1.3.1
-argcomplete==3.4.0
-async-timeout==4.0.3
-attrs==23.2.1.dev0
-autocommand==2.2.2
-Automat==22.10.0
-beautifulsoup4==4.12.3
-black==24.8.0
-Brlapi==0.8.5
-btrfsutil==6.10
-build==1.2.1
-CacheControl==0.14.0
-cachy==0.3.0
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-cleo==2.1.0
-click==8.1.7
-cloud-init==24.2
-configobj==5.0.8
-constantly==23.10.0
-crashtest==0.4.1
-cryptography==42.0.7
-distlib==0.3.8
-distro==1.9.0
-dnspython==2.6.1
-docopt==0.6.2
-dulwich==0.22.1
-fastjsonschema==2.20.0
-filelock==3.13.3
-frozenlist==1.4.1
-git-filter-repo==2.38.0
-html5lib==1.1
-hyperlink==21.0.0
-idna==3.8
-incremental==22.10.0
-inflect==7.3.1
-installer==0.7.0
-isort==5.13.2
-jaraco.classes==3.4.0
-jaraco.context==5.3.0
-jaraco.functools==4.0.2
-jaraco.text==4.0.0
-jeepney==0.8.0
-Jinja2==3.1.4
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-keyring==25.2.1
-lark==1.1.9
-lockfile==0.12.2
-louis==3.31.0
-lxml==5.3.0
-Mako==1.3.5.dev0
-Markdown==3.7
-MarkupSafe==2.1.5
-meson==1.5.1
-more-itertools==10.3.0
-msgpack==1.0.5
-multidict==6.0.5
-mypy_extensions==1.0.0
-netifaces==0.11.0
-nftables==0.1
-oauthlib==3.2.2
-ordered-set==4.1.0
-packaging==24.1
-pathspec==0.12.1
-pexpect==4.9.0
-pillow==10.4.0
-pipx==1.6.0
-pkginfo==1.10.0
-platformdirs==4.2.2
-poetry==1.8.3
-poetry-core==1.9.0
-poetry-plugin-export==1.8.0
-psutil==6.0.0
-ptyprocess==0.7.0
-pulsemixer==1.5.1
-pwquality==1.4.5
-pycairo==1.26.1
-pycparser==2.22
-Pygments==2.18.0
-PyGObject==3.48.2
-pyinotify==0.9.6
-pyOpenSSL==24.2.1
-pyproject_hooks==1.1.0
-pyserial==3.5
-pyxdg==0.28
-PyYAML==6.0.2
-ranger-fm==1.9.3
-rapidfuzz==3.6.2
-redis==5.0.7
-referencing==0.35.1
-Reflector==2023.6.28.0.36.1
-requests==2.32.3
-requests-toolbelt==1.0.0
-rpds-py==0.19.0
-SecretStorage==3.3.3
-setuptools==69.5.1
-shellingham==1.5.4
-six==1.16.0
-smbus==1.1
-soupsieve==2.6
-TBB==0.2
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.13.2
-tqdm==4.66.5
-trash-cli==0.24.5.26
-trove-classifiers==2024.7.22
-Twisted==24.3.0
-typeguard==4.3.0
-typing_extensions==4.12.2
-ueberzug==18.2.3
-ufw==0.36.2
-urllib3==1.26.19
-userpath==1.9.2
-validate==5.0.8
-validate-pyproject==0.19
-virtualenv==20.26.2
-webencodings==0.5.1
-wheel==0.44.0
-yarl==1.9.4
-zope.interface==7.0.3
+pandas
+matplotlib
+pillow
+torch
+torchvision
+tqdm
